test/testData/parser/negative/illegalPrimitveTypes.c

short char x1;
short float x2;
short double x3;
short void x4;

long char x5;
long float x6;
long long double x7;

unsigned long double x8;
signed long double x9;

unsigned float x10;
unsigned double x11;
unsigned void x12;




