test/testData/parser/negative/illegalPrimitveTypes.err
test/testData/parser/negative/illegalPrimitveTypes.c:2:12: error: 'short char' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:3:13: error: 'short float' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:4:14: error: 'short double' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:5:12: error: 'short void' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:7:11: error: 'long char' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:8:12: error: 'long float' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:9:18: error: 'long long double' is invalid
test/testData/parser/negative/illegalPrimitveTypes.c:11:22: error: 'long double' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:12:20: error: 'long double' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:14:16: error: 'float' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:15:17: error: 'double' cannot be signed or unsigned
test/testData/parser/negative/illegalPrimitveTypes.c:16:15: error: 'void' cannot be signed or unsigned
